# Breakout

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/: filler.txt
assets/Sounds/: credits.md
src/Engine/: CMakeLists.txt
src/Engine/include/Engine/: Application.h  Layer.h  Renderer.h  ResourceManager.h
src/Engine/include/Engine/ECS/: Component.h  ComponentManager.h  ECS.h  Entity.h  EventManager.h  System.h
src/Engine/include/Engine/Math/: Easing.h
src/Engine/include/Engine/Resources/: ManagedFont.h  ManagedSprite.h  ResourceManager.h  Text.h  Texture.h
src/Engine/source/: Application.cpp  HelloWorld.cpp  ResourceManager.cpp
src/Game/: CMakeLists.txt  main.cpp
src/Game/include/: BreakoutECS.h  BreakoutGameLayer.h  Components.h  ECSExample.h  Entities.h  Events.h  GameLayer.h
src/Game/include/Breakout/: BreakoutComponents.h  BreakoutSystems.h
src/Game/include/Entities/: Ball.h
src/Game/include/Example/: ECSExample.h  ExampleStructs.h  ExampleSystems.h
src/Game/include/Systems/: AudioSystem.h  BallLifeSystem.h  BallTrackingSystem.h  BoxSpawningSystem.h  CollisionDetectionSystem.h  CollisionResolutionSystem.h  CollisionSystem.h  DestroyedSystem.h  LerpingSystem.h  LocationSyncSystem.h  PaddleBallSpawnSystem.h  PhysicsSystem.h  PlayerMovementSystem.h  PlayerSystem.h  RenderSystem.h  ScoreSystem.h  Systems.h
src/Game/source/: BreakoutGameLayer.cpp  ECSExample.cpp  Entities.cpp  GameLayer.cpp
src/Game/source/Systems/: BallLifeSystem.cpp  CollisionDetectionSystem.cpp  CollisionResolutionSystem.cpp  CollisionSystem.cpp
